@@ -1,9 +1,9 @@
 FROM ghcr.io/rse-ops/cuda-ubuntu-20.04:cuda-11.0.3
 
-# docker build -t ghcr.io/mfem/mfem-ubuntu .
+# docker build -t ghcr.io/mfem/mfem-ubuntu-base .
 
 RUN apt-get update && \
-    apt-get install -y unzip gfortran && \ 
+    apt-get install -y unzip gfortran && \
     spack compiler find && \
     apt-get install -y libcurl4-openssl-dev libssl-dev
 
